--- a/en/api-reference/endpoint/video-generation.mdx
+++ b/en/api-reference/endpoint/video-generation.mdx
@@ -378,13 +378,14 @@ Submit a video generation task and return a task ID for subsequent queries.
       -H "Content-Type: application/json" \
       -d '{
         "model": "doubao-seedance-1-0-lite-t2v-250428",
-        "prompt": "A cute kitten playing in a garden, sunny day",
-        "content": [
-          {
-            "type": "text",
-            "text": "A cute kitten playing in a garden, sunny day --ratio 16:9 --dur 5 --rs 720p --wm false"
-          }
-        ]
+        "metadata": {
+          "content": [
+            {
+              "type": "text",
+              "text": "A cute kitten playing in a garden, sunny day --ratio 16:9 --dur 5 --rs 720p --wm false"
+            }
+          ]
+        }
       }'
     ```
     
@@ -395,13 +396,14 @@ Submit a video generation task and return a task ID for subsequent queries.
       -H "Content-Type: application/json" \
       -d '{
         "model": "doubao-seedance-1-0-lite-t2v-250428",
-        "prompt": "A cute kitten playing in a garden, sunny day",
-        "content": [
-          {
-            "type": "text",
-            "text": "A cute kitten playing in a garden, sunny day --ratio 9:16 --dur 10 --rs 1080p --fps 30 --wm true --seed 12345"
-          }
-        ]
+        "metadata": {
+          "content": [
+            {
+              "type": "text",
+              "text": "A cute kitten playing in a garden, sunny day --ratio 9:16 --dur 10 --rs 1080p --fps 30 --wm true --seed 12345"
+            }
+          ]
+        }
       }'
     ```
     
@@ -412,19 +414,20 @@ Submit a video generation task and return a task ID for subsequent queries.
       -H "Content-Type: application/json" \
       -d '{
         "model": "doubao-seedance-1-0-lite-i2v-250428",
-        "prompt": "A girl opens her eyes and looks gently at the camera",
-        "content": [
-          {
-            "type": "text",
-            "text": "A girl opens her eyes and looks gently at the camera --ratio adaptive --dur 5 --rs 720p --wm false"
-          },
-          {
-            "type": "image_url",
-            "image_url": {
-              "url": "data:image/png;base64,iVBORw0KGgoAAxxxx..."
+        "metadata": {
+          "content": [
+            {
+              "type": "text",
+              "text": "A girl opens her eyes and looks gently at the camera --ratio adaptive --dur 5 --rs 720p --wm false"
+            },
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "data:image/png;base64,iVBORw0KGgoAAxxxx..."
+              }
             }
-          }
-        ]
+          ]
+        }
       }'
     ```
     
@@ -435,27 +438,28 @@ Submit a video generation task and return a task ID for subsequent queries.
       -H "Content-Type: application/json" \
       -d '{
         "model": "doubao-seedance-1-0-lite-i2v-250428",
-        "prompt": "A blue-green jingwei bird transforms into human form",
-        "content": [
-          {
-            "type": "text",
-            "text": "A blue-green jingwei bird transforms into human form --rs 720p --dur 5 --fps 24 --cf false --wm false --seed 67890"
-          },
-          {
-            "type": "image_url",
-            "image_url": {
-              "url": "data:image/png;base64,iVBORw0KGgoAAxxxx..."
+        "metadata": {
+          "content": [
+            {
+              "type": "text",
+              "text": "A blue-green jingwei bird transforms into human form --rs 720p --dur 5 --fps 24 --cf false --wm false --seed 67890"
             },
-            "role": "first_frame"
-          },
-          {
-            "type": "image_url",
-            "image_url": {
-              "url": "data:image/png;base64,iVBORw0KGgoAAyyyy..."
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "data:image/png;base64,iVBORw0KGgoAAxxxx..."
+              },
+              "role": "first_frame"
             },
-            "role": "last_frame"
-          }
-        ]
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "data:image/png;base64,iVBORw0KGgoAAyyyy..."
+              },
+              "role": "last_frame"
+            }
+          ]
+        }
       }'
     ```
     
@@ -466,34 +470,35 @@ Submit a video generation task and return a task ID for subsequent queries.
       -H "Content-Type: application/json" \
       -d '{
         "model": "doubao-seedance-1-0-lite-i2v-250428",
-        "prompt": "[图1] A boy wearing glasses and blue T-shirt and [图2] corgi dog, sitting on [图3] lawn, 3D cartoon style",
-        "content": [
-          {
-            "type": "text",
-            "text": "[图1] A boy wearing glasses and blue T-shirt and [图2] corgi dog, sitting on [图3] lawn, 3D cartoon style --rs 720p --dur 5 --ratio 16:9 --wm false"
-          },
-          {
-            "type": "image_url",
-            "image_url": {
-              "url": "https://example.com/ref1.png"
+        "metadata": {
+          "content": [
+            {
+              "type": "text",
+              "text": "[图1] A boy wearing glasses and blue T-shirt and [图2] corgi dog, sitting on [图3] lawn, 3D cartoon style --rs 720p --dur 5 --ratio 16:9 --wm false"
             },
-            "role": "reference_image"
-          },
-          {
-            "type": "image_url",
-            "image_url": {
-              "url": "https://example.com/ref2.png"
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "https://example.com/ref1.png"
+              },
+              "role": "reference_image"
             },
-            "role": "reference_image"
-          },
-          {
-            "type": "image_url",
-            "image_url": {
-              "url": "https://example.com/ref3.png"
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "https://example.com/ref2.png"
+              },
+              "role": "reference_image"
             },
-            "role": "reference_image"
-          }
-        ]
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "https://example.com/ref3.png"
+              },
+              "role": "reference_image"
+            }
+          ]
+        }
       }'
     ```
     
@@ -504,19 +509,20 @@ Submit a video generation task and return a task ID for subsequent queries.
       -H "Content-Type: application/json" \
       -d '{
         "model": "doubao-seedance-1-0-pro-250528",
-        "prompt": "A girl opens her eyes and looks gently at the camera",
-        "content": [
-          {
-            "type": "text",
-            "text": "A girl opens her eyes and looks gently at the camera --ratio 16:9 --dur 5 --rs 1080p --wm false"
-          },
-          {
-            "type": "image_url",
-            "image_url": {
-              "url": "data:image/png;base64,iVBORw0KGgoAAxxxx..."
+        "metadata": {
+          "content": [
+            {
+              "type": "text",
+              "text": "A girl opens her eyes and looks gently at the camera --ratio 16:9 --dur 5 --rs 1080p --wm false"
+            },
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "data:image/png;base64,iVBORw0KGgoAAxxxx..."
+              }
             }
-          }
-        ]
+          ]
+        }
       }'
     ```
   </Tab>
@@ -554,8 +560,8 @@ Submit a video generation task and return a task ID for subsequent queries.
   - `doubao-seedance-1-0-pro-250528` - Text-to-video (first frame mode)
 </ParamField>
 
-<ParamField body="prompt" type="string" required>
-  Video generation prompt, describing scene actions and settings
+<ParamField body="prompt" type="string">
+  Video generation prompt, describing scene actions and settings. **Note**: Doubao Seedance series models do not require this field, the prompt should be written directly in the `text` field of the `metadata.content` array
 </ParamField>
 
 <ParamField body="image" type="string">
@@ -655,8 +661,8 @@ Different models support different specific parameters. Below are detailed descr
   </Tab>
   
   <Tab title="Doubao Seedance">
-<ParamField body="content" type="array" required>
-  Content array, must include text and optional images. Parameters are controlled through special markers in text prompts:
+<ParamField body="metadata.content" type="array" required>
+  Content array, must be placed in the `metadata` object. Must include text and optional images. Parameters are controlled through special markers in text prompts:
   - `--rs` or `--resolution`: Resolution (`480p`, `720p`, `1080p`)
   - `--ratio`: Aspect ratio (`16:9`, `9:16`, `1:1`, `4:3`, `3:4`, `adaptive`, note that `doubao-seedance-1-0-lite-t2v-250428` does not support `adaptive`)
   - `--dur` or `--duration`: Duration (seconds, e.g. `5`, `10`)
@@ -665,25 +671,26 @@ Different models support different specific parameters. Below are detailed descr
   - `--wm` or `--watermark`: Watermark toggle (`true`, `false`)
   - `--cf` or `--camerafixed`: Fixed camera (`true`, `false`, only lite models support)
   
-  **content array format**:
+  **metadata.content array format**:
   ```json
-  [
-    {
-      "type": "text",
-      "text": "Prompt content --ratio 16:9 --dur 5 --rs 720p --wm false"
-    },
-    {
-      "type": "image_url",
-      "image_url": {
-        "url": "data:image/png;base64,..."
-      },
-      "role": "first_frame"  // Optional: first_frame, last_frame, reference_image
+  {
+    "metadata": {
+      "content": [
+        {
+          "type": "text",
+          "text": "Prompt content --ratio 16:9 --dur 5 --rs 720p --wm false"
+        },
+        {
+          "type": "image_url",
+          "image_url": {
+            "url": "data:image/png;base64,..."
+          },
+          "role": "first_frame"  // Optional: first_frame, last_frame, reference_image
+        }
+      ]
     }
-  ]
+  }
   ```
-</ParamField>
-<ParamField body="prompt" type="string" required>
-  Base prompt (without parameter markers), parameter markers will be automatically added to the text in the content array
 </ParamField>
   </Tab>
 </Tabs>
@@ -692,7 +699,7 @@ Different models support different specific parameters. Below are detailed descr
 
 ### Doubao Seedance Series
 
-Doubao Seedance series models use a special parameter passing method: **all parameters are passed through special markers in the prompt**, and images are passed through the `content` array.
+Doubao Seedance series models use a special parameter passing method: **all parameters are passed through special markers in the prompt**, and images are passed through the `metadata.content` array.
 
 #### 1. Text-to-Video (T2V)
 
@@ -702,13 +709,14 @@ curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
   -H "Content-Type: application/json" \
   -d '{
     "model": "doubao-seedance-1-0-lite-t2v-250428",
-    "prompt": "A cute kitten playing in a garden, sunny day",
-    "content": [
-      {
-        "type": "text",
-        "text": "A cute kitten playing in a garden, sunny day --ratio 16:9 --dur 5 --rs 720p --wm false"
-      }
-    ]
+    "metadata": {
+      "content": [
+        {
+          "type": "text",
+          "text": "A cute kitten playing in a garden, sunny day --ratio 16:9 --dur 5 --rs 720p --wm false"
+        }
+      ]
+    }
   }'
 ```
 
@@ -720,19 +728,20 @@ curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
   -H "Content-Type: application/json" \
   -d '{
     "model": "doubao-seedance-1-0-lite-i2v-250428",
-    "prompt": "A girl opens her eyes and looks gently at the camera",
-    "content": [
-      {
-        "type": "text",
-        "text": "A girl opens her eyes and looks gently at the camera --ratio adaptive --dur 5 --rs 720p --wm false"
-      },
-      {
-        "type": "image_url",
-        "image_url": {
-          "url": "data:image/png;base64,iVBORw0KGgoAAxxxx..."
+    "metadata": {
+      "content": [
+        {
+          "type": "text",
+          "text": "A girl opens her eyes and looks gently at the camera --ratio adaptive --dur 5 --rs 720p --wm false"
+        },
+        {
+          "type": "image_url",
+          "image_url": {
+            "url": "data:image/png;base64,iVBORw0KGgoAAxxxx..."
+          }
         }
-      }
-    ]
+      ]
+    }
   }'
 ```
 
@@ -744,27 +753,28 @@ curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
   -H "Content-Type: application/json" \
   -d '{
     "model": "doubao-seedance-1-0-lite-i2v-250428",
-    "prompt": "A blue-green jingwei bird transforms into human form",
-    "content": [
-      {
-        "type": "text",
-        "text": "A blue-green jingwei bird transforms into human form --rs 720p --dur 5 --cf false"
-      },
-      {
-        "type": "image_url",
-        "image_url": {
-          "url": "data:image/png;base64,iVBORw0KGgoAAxxxx..."
+    "metadata": {
+      "content": [
+        {
+          "type": "text",
+          "text": "A blue-green jingwei bird transforms into human form --rs 720p --dur 5 --cf false"
         },
-        "role": "first_frame"
-      },
-      {
-        "type": "image_url",
-        "image_url": {
-          "url": "data:image/png;base64,iVBORw0KGgoAAyyyy..."
+        {
+          "type": "image_url",
+          "image_url": {
+            "url": "data:image/png;base64,iVBORw0KGgoAAxxxx..."
+          },
+          "role": "first_frame"
         },
-        "role": "last_frame"
-      }
-    ]
+        {
+          "type": "image_url",
+          "image_url": {
+            "url": "data:image/png;base64,iVBORw0KGgoAAyyyy..."
+          },
+          "role": "last_frame"
+        }
+      ]
+    }
   }'
 ```
 
@@ -776,40 +786,42 @@ curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
   -H "Content-Type: application/json" \
   -d '{
     "model": "doubao-seedance-1-0-lite-i2v-250428",
-    "prompt": "[图1] A boy wearing glasses and blue T-shirt and [图2] corgi dog, sitting on [图3] lawn, 3D cartoon style",
-    "content": [
-      {
-        "type": "text",
-        "text": "[图1] A boy wearing glasses and blue T-shirt and [图2] corgi dog, sitting on [图3] lawn, 3D cartoon style --rs 720p --dur 5"
-      },
-      {
-        "type": "image_url",
-        "image_url": {
-          "url": "https://example.com/ref1.png"
+    "metadata": {
+      "content": [
+        {
+          "type": "text",
+          "text": "[图1] A boy wearing glasses and blue T-shirt and [图2] corgi dog, sitting on [图3] lawn, 3D cartoon style --rs 720p --dur 5"
         },
-        "role": "reference_image"
-      },
-      {
-        "type": "image_url",
-        "image_url": {
-          "url": "https://example.com/ref2.png"
+        {
+          "type": "image_url",
+          "image_url": {
+            "url": "https://example.com/ref1.png"
+          },
+          "role": "reference_image"
         },
-        "role": "reference_image"
-      },
-      {
-        "type": "image_url",
-        "image_url": {
-          "url": "https://example.com/ref3.png"
+        {
+          "type": "image_url",
+          "image_url": {
+            "url": "https://example.com/ref2.png"
+          },
+          "role": "reference_image"
         },
-        "role": "reference_image"
-      }
-    ]
+        {
+          "type": "image_url",
+          "image_url": {
+            "url": "https://example.com/ref3.png"
+          },
+          "role": "reference_image"
+        }
+      ]
+    }
   }'
 ```
 
 **Important Notes**:
+- The `content` array must be placed in the `metadata` object
 - All parameters must be passed through special markers in the prompt (e.g., `--ratio 16:9`)
-- Images must be placed in the `content` array using `image_url` type
+- Images must be placed in the `metadata.content` array using `image_url` type
 - First/last frame mode requires two images, marked with `role: "first_frame"` and `role: "last_frame"` respectively
 - Reference image mode requires using `[图1]`, `[图2]` etc. in the prompt to reference images, with images marked `role: "reference_image"`
 - `doubao-seedance-1-0-lite-t2v-250428` does not support image input and `adaptive` aspect ratio
@@ -1040,7 +1052,6 @@ curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
       -H "Content-Type: application/json" \
       -d '{
         "model": "doubao-seedance-1-0-pro-250528",
-        "prompt": "Multiple shots. A detective enters a dimly lit room. He examines clues on the table, picks up an item. Camera turns to him thinking. --ratio 16:9 --dur 5",
         "metadata": {
           "content": [
             {
@@ -1060,7 +1071,6 @@ curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
       -H "Content-Type: application/json" \
       -d '{
         "model": "doubao-seedance-1-0-pro-250528",
-        "prompt": "A girl holding a fox, the girl opens her eyes, looks gently at the camera, the fox hugs friendly, camera slowly pulls out, the girl'\''s hair is blown by the wind --ratio adaptive --dur 5",
         "metadata": {
           "content": [
             {
@@ -1086,7 +1096,6 @@ curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
       -H "Content-Type: application/json" \
       -d '{
         "model": "doubao-seedance-1-0-lite-i2v-250428",
-        "prompt": "A blue-green jingwei bird transforms into human form --rs 720p --dur 5 --cf false",
         "metadata": {
           "content": [
             {
@@ -1120,7 +1129,6 @@ curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
       -H "Content-Type: application/json" \
       -d '{
         "model": "doubao-seedance-1-0-lite-i2v-250428",
-        "prompt": "[图1] A boy wearing glasses and blue T-shirt and [图2] corgi dog, sitting on [图3] lawn, 3D cartoon style",
         "metadata": {
           "content": [
             {
