--- a/en/nebula-lab-v4/endpoint/video-text-to-video-submit.mdx
+++ b/en/nebula-lab-v4/endpoint/video-text-to-video-submit.mdx
@@ -10,7 +10,8 @@ Submit text-to-video task, used to generate video based on text description.
 ## Authentication
 
 <ParamField header="Authorization" type="string" required>
-  Bearer Token, e.g., `Bearer sk-xxxxxxxxxx`
+  Bearer Token, e.g., `Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9...`
+  How to get: Obtain via the POST interface in the Authentication module at the top left, `https://docs.openai-nebula.com/en/nebula-lab-v4/endpoint/get-token`
 </ParamField>
 
 ## Request Parameters
